--- a/berandaStyle.css
+++ b/berandaStyle.css
@@ -99,6 +99,16 @@ header{
 .icon i:hover {
     background: #5A4FCF;
     color: #FFFFFF;
+	font-size: 16px;
+}
+
+.nyambutUser {
+	color: #5A4FCF;
+	font-size: 16px;
+	cursor: pointer;
+	margin-left: 5px;
+	margin-right: 10px;
+	font-weight: 600;
 }
 
 .login {
@@ -134,6 +144,16 @@ header{
 
 .main a:hover{
 	color: var(--main-color);
+}
+
+.tombolLogout {
+	color: #656565;
+	font-size: 16px;
+	font-weight: 500;
+}
+
+.tombolLogout:hover {
+	color: #5A4FCF;
 }
 
 #menu-icon{
