--- a/forgotPasswordStyle.css
+++ b/forgotPasswordStyle.css
@@ -26,6 +26,12 @@ body {
     width: 400px;
 }
 
+.fail {
+    color: #fd3a4a;
+    font-size: 12px;
+    font-weight: 600;
+}
+
 form {
     width: 250px;
     margin: 60px auto;
@@ -45,37 +51,6 @@ hr {
 p {
     text-align: center;
     margin: 10px;
-}
-
-input {
-    width: 100%;
-    margin: 2px;
-    border: none;
-    outline: none;
-    padding: 8px;
-    border-radius: 5px;
-    border: 1px solid gray;
-}
-
-button {
-    border: none;
-    outline: none;
-    padding: 8px;
-    width: 252px;
-    cursor: pointer;
-    margin-top: 20px;
-    border-radius: 5px;
-    background: #FDC886;
-}
-
-button a {
-    color: #FFFFFF;
-    font-size: 16px;
-    text-decoration: none;
-}
-
-button:hover {
-    background: rgba(20, 200, 64, 1);
 }
 
 @media (max-width: 880px) {
