--- a/kantinStyle.css
+++ b/kantinStyle.css
@@ -105,6 +105,25 @@ header{
     color: #FFFFFF;
 }
 
+.nyambutUser {
+	color: #5A4FCF;
+	font-size: 16px;
+	cursor: pointer;
+	margin-left: 5px;
+	margin-right: 10px;
+	font-weight: 600;
+}
+
+.tombolLogout {
+	color: #656565;
+	font-size: 16px;
+	font-weight: 500;
+}
+
+.tombolLogout:hover {
+	color: #5A4FCF;
+}
+
 .login {
     top: 0;
     display: flex;
