--- a/tentangSaptaStyle.css
+++ b/tentangSaptaStyle.css
@@ -101,6 +101,25 @@ header{
     color: #FFFFFF;
 }
 
+.nyambutUser {
+	color: #5A4FCF;
+	font-size: 16px;
+	cursor: pointer;
+	margin-left: 5px;
+	margin-right: 10px;
+	font-weight: 600;
+}
+
+.tombolLogout {
+	color: #656565;
+	font-size: 16px;
+	font-weight: 500;
+}
+
+.tombolLogout:hover {
+	color: #5A4FCF;
+}
+
 .login {
     top: 0;
     display: flex;
@@ -191,7 +210,7 @@ header{
             rgba(0, 0, 0, 0)0%,
             rgba(0, 0, 0, 0.2),
             rgba(0, 0, 0, 0.2)),
-        url(images/Tentang\ Sapta\ Dharma\ Kantin\ Fateta.jpg.crdownload);
+        url(images/Tentang\ Sapta\ Dharma\ Kantin\ Fateta.jpg);
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
