--- a/berandaStyle.css
+++ b/berandaStyle.css
@@ -206,58 +206,120 @@ header{
 }
 
 .container {
-    margin-top: 200px;
-    padding: 2rem;
-}
-
-.slider-wrapper {
-    position: relative;
-    max-width: 48rem;
-    margin: 0 auto;
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background: #fafafa;
 }
 
 .slider {
-    display: flex;
-    aspect-ratio: 16/9;
-    overflow-x: auto;
-    scroll-snap-type: x mandatory;
-    scroll-behavior: smooth;
-    box-shadow: 0 1.5rem 3rem -0.75rem hsla(0, 0%, 0%, 0.25);
-    border-radius: 0.5rem;
+	margin-top: 100px;
+	margin-left: 200px;
+	width: 1200px;
+	height: 600px;
+	border-radius: 24px;
+	overflow: hidden;
 }
 
-.slider img {
-    flex: 1 0 100%;
-    scroll-snap-align: start;
-    object-fit: cover;
+.slides {
+	width: 500%;
+	height: 200px;
+	display: flex;
 }
 
-.slider-nav {
-    display: flex;
-    column-gap: 1rem;
-    position: absolute;
-    bottom: 1.25 rem;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 1;
+.slides input {
+	display: none;
 }
 
-.slider-nav a {
-    width: 0.5rem;
-    height: 0.5rem;
-    border-radius: 50%;
-    background-color: #ffffff;
-    opacity: 75%;
-    transition: opacity ease 250ms;
+.slide {
+	width: 20%;
+	transition: 2s;
 }
 
-.slider-nav a:hover {
-    opacity: 1;
+.slide img {
+	width: 1200px;
+	height: 700px;
+}
+
+.manualNavigation {
+	position: absolute;
+	width: 800px;
+	margin-top: 40px;
+	display: flex;
+	justify-content: center;
+	margin-left: 200px;
+}
+
+.manualBtn {
+	border: 2px solid #40D3DC;
+	padding: 5px;
+	border-radius: 10px;
+	cursor: pointer;
+	transition: 1s;
+	margin-top: 300px;
+	
+}
+
+.manualBtn:not(:last-child) {
+	margin-right: 40px;
+}
+
+.manualBtn:hover {
+	background: #40D3DC;
+}
+
+#radio1:checked ~ .first {
+	margin-left: 0;
+}
+
+#radio2:checked ~ .first {
+	margin-left: -20%;
+}
+
+#radio3:checked ~ .first {
+	margin-left: -40%;
+}
+
+.autoNavigation {
+	position: absolute;
+	display: flex;
+	width: 800px;
+	justify-content: center;
+	margin-top: 460px;
+	display: none;
+}
+
+.autoNavigation div {
+	border: 2px solid #40D3DC;
+	padding: 5px;
+	border-radius: 10px;
+	transition: 1s;
+}
+
+.autoNavigation div:not(:last-child) {
+	margin-right: 40px;
+}
+
+#radio1:checked ~ .autoNavigation .autoBtn1 {
+	background: #40D3DC;
+}
+
+#radio2:checked ~ .autoNavigation .autoBtn2 {
+	background: #40D3DC;
+}
+
+#radio3:checked ~ .autoNavigation .autoBtn3 {
+	background: #40D3DC;
 }
 
 .detailSapta {
+	margin-top: 200px;
+	position: absolute;
+	margin-left: -900px;
+	background-color: #FFFFFF;
 	display: flex;
-	width: 30%;
+	width: 28%;
 	height: 280px;
     overflow-x: auto;
     scroll-snap-type: x mandatory;
@@ -306,7 +368,8 @@ header{
     cursor: pointer;
     border-radius: 5px;
     background: #FDC886;
-	margin-top: 10px;
+	margin-top: 24px;
+	margin-bottom: 5px;
 }
 
 .cekKantin a {
