fix color autoBtn

--- a/berandaStyle.css
+++ b/berandaStyle.css
@@ -252,13 +252,12 @@ header{
 }
 
 .manualBtn {
-	border: 2px solid #40D3DC;
+	border: 2px solid #FDC886;
 	padding: 5px;
 	border-radius: 10px;
 	cursor: pointer;
 	transition: 1s;
 	margin-top: 300px;
-	
 }
 
 .manualBtn:not(:last-child) {
@@ -266,7 +265,7 @@ header{
 }
 
 .manualBtn:hover {
-	background: #40D3DC;
+	background: #FDC886;
 }
 
 #radio1:checked ~ .first {
@@ -286,12 +285,12 @@ header{
 	display: flex;
 	width: 800px;
 	justify-content: center;
-	margin-top: 460px;
-	display: none;
+	margin-top: 540px;
+	margin-left: 200px;
 }
 
 .autoNavigation div {
-	border: 2px solid #40D3DC;
+	border: 2px solid #FDC886;
 	padding: 5px;
 	border-radius: 10px;
 	transition: 1s;
@@ -302,15 +301,15 @@ header{
 }
 
 #radio1:checked ~ .autoNavigation .autoBtn1 {
-	background: #40D3DC;
+	background: #FDC886;
 }
 
 #radio2:checked ~ .autoNavigation .autoBtn2 {
-	background: #40D3DC;
+	background: #FDC886;
 }
 
 #radio3:checked ~ .autoNavigation .autoBtn3 {
-	background: #40D3DC;
+	background: #FDC886;
 }
 
 .detailSapta {
