--- a/cart2Style.css
+++ b/cart2Style.css
@@ -577,11 +577,11 @@ input:checked+.radio-tile label {
 }
 
 .labelDefault {
-	color: #fafafa;
+	color: #656565;
 }
 
 .inputDefault {
-	color: #fafafa;
+	color: #656565;
 }
 
 .wrapperFlex {
@@ -596,6 +596,10 @@ input:checked+.radio-tile label {
 	letter-spacing: 2px;
 	border-radius: 5px;
 	border: 1px solid #5A4FCF;
+}
+
+.wrapperFlex input:active {
+	border: 3px solid #5A4FCF;
 }
 
 .btn2 {
